--- a/style_inicial.css
+++ b/style_inicial.css
@@ -1,11 +1,16 @@
+body{
+	position: relative;
+}
+
 header {
 	border-style: solid;
 	font-family: Palatino, sans-serif;
 	border-width: 0.25rem;
-	color: rgb(253,206,5);
+	color: rgb(30,144,255);
 	margin: 1rem;
-	padding: 1rem;
-	position: relative;
+	width:33rem ;
+	position: absolute;
+	bottom: 0;
 }
 
 .imagem1 {
@@ -17,8 +22,8 @@ header {
 }
 
 .parent {
-	background-color: rgb(253,206,5);
-	margin: 1rem;
+	background-color: rgb(30,144,255);
+
 	padding: 1rem;
 	display: flex;
 	list-style: none;
@@ -29,5 +34,5 @@ header {
 }
 
 .fas fa-arrow-right{
-	font-size: 2.5rem;
+	size: 10rem;
 }
