--- a/style_inicial.css
+++ b/style_inicial.css
@@ -6,11 +6,16 @@ header {
 	border-style: solid;
 	font-family: Palatino, sans-serif;
 	border-width: 0.25rem;
-	color: rgb(30,144,255);
+	/*color: rgb(30,144,255);*/
+	color: rgb(0,0,0);
 	margin: 1rem;
 	width:33rem ;
 	position: absolute;
 	bottom: 0;
+	left:0;
+    transition: left .5s;
+
+
 }
 
 .imagem1 {
@@ -23,16 +28,38 @@ header {
 
 .parent {
 	background-color: rgb(30,144,255);
-
 	padding: 1rem;
 	display: flex;
 	list-style: none;
-
+	size: 15rem;
 	position: relative;
-	justify-content: center;
-	align-content: center;
+
 }
 
-.fas fa-arrow-right{
-	size: 10rem;
+.fas .fa-arrow-right{
+	display: inline;
+	color: rgb(0,0,0);
+	background-color: red;
+
 }
+
+.fas .fa-question{
+	position: relative;
+	background-color: orange;
+	display: inline;
+
+}
+
+/*.fas fa-arrow-right:hover + .header{
+	position: fixed;
+	bottom: 0;
+}*/
+
+/*header:hover {
+	left: 0;
+}*/
+
+
+
+
+
