--- a/somos.css
+++ b/somos.css
@@ -1,14 +1,21 @@
-.subbox {
+.texto {;
 	border-style: solid;
-	font-family: Roboto Condensed, Helvetica, sans-serif;
-	background-color: rgb(30,144,255); 
+	font-family: Palatino, sans-serif;
 	font-size: 1.5rem;
 	font-weight: bold;
 	color: rgb(0,0,0);
-	text-align: center;
-	margin-left: 5rem;
-	padding: 1px;
-	width: 10rem;
-	height: 10rem;
+	/*text-align: center;*/
+	justify-content: space-evenly;
+
 
 }
+
+body{
+
+	background-color: rgb(30,144,255); 
+
+
+
+
+}
+
