--- a/style_inicial.css
+++ b/style_inicial.css
@@ -19,20 +19,9 @@
 	margin-left: 2rem;
 }
 
-
-.texto{
-	border-style: solid;
-	visibility: hidden;
-	font-family: Palatino, sans-serif;
-	font-size: 1.5rem;
-	font-weight: bold;
+a:hover{
 	color: rgb(0,0,0);
-	position: fixed;
-	background-color: rgb(30,144,255);
-	/*text-align: center;*/
-	justify-content: space-evenly;
-	left: -90%;
-	transition: left .5s
+	text-decoration: none;
 
 }
 
