--- a/style_inicial.css
+++ b/style_inicial.css
@@ -10,7 +10,7 @@
 .imagem1 {
 	/*display: flex;*/
 	width: 100%;
-	background-image: url("aprocura.jpg");
+	background-image: url("sem_pin.jpeg");
 	background-position: center;
 	background-repeat: no-repeat; /* Do not repeat the image */
   	background-size: cover; /* Resize the background image to cover the entire container */
